fix alignment

--- a/app/bundles/CoreBundle/Assets/css/app.css
+++ b/app/bundles/CoreBundle/Assets/css/app.css
@@ -2899,7 +2899,7 @@ ul.dropdown-menu-form {
 }
 .label {
   display: inline-flex;
-  font-size: 80%;
+  font-size: 11px;
   font-weight: 600;
   gap: 6px;
   line-height: 1;
