--- a/app/bundles/CoreBundle/Assets/css/app/less/components/labels.less
+++ b/app/bundles/CoreBundle/Assets/css/app/less/components/labels.less
@@ -4,7 +4,7 @@
 
 .label {
   display: inline-flex;
-  font-size: 80%;
+  font-size: 11px;
   font-weight: 600;
   gap: 6px;
   line-height: 1;
